# OMNIA-RADAR

./: .gitignore  .zenodo.json  CITATION.cff  RADAR_SCHEMA.md  README.md  TOTALITY-FIELD.md  ecosystem_manifest.json  pyproject.toml  radar_scan.py
candidates/: human_trajectory.jsonl
docs/: ACTIVE_CLAIM_MICRO_FIX_REPORT.json  ACTIVE_CLAIM_MICRO_FIX_REPORT.md  ANOMALY_PERSISTENCE_DRIFT.md  BACKBONE_CI_REPAIR_REPORT.md  BACKBONE_COMPLIANCE.md  CI_FINAL_COLLECTION_FIX_REPORT.md  DETECTION_BOUNDARY.md  DOI_REGISTRY.md  ECOSYSTEM_ROLE.md  EMERGENCE_BEYOND_LIMIT_V1.md  EMERGENCE_BEYOND_LIMIT_V2.md  EMERGENCE_BEYOND_LIMIT_V3A.md  OMNIA_RADAR_PUBLIC_POSITION.md  ONLINE_CI_REPAIR_REPORT.md  PRODUCTION_READINESS.md  QUICKSTART_RADAR.md  RADAR_ADVERSARIAL_STRUCTURE_TEST_V5.md  RADAR_CLAIM.md  RADAR_CROSS_DOMAIN_SCAN_V4.md  RADAR_ENTRY_POINT.md  RADAR_EXTERNAL_STRUCTURE_SCAN_V3C.md  RADAR_MANIFEST.json  RADAR_NATURAL_OUTLIER_SCAN_V3D.md  RADAR_ONE_PAGER.md  RADAR_OVERVIEW.md  RADAR_PURE_STRUCTURE_SCAN_V3B.md  RADAR_SCOPE.md  RADAR_STRUCTURE_PERSISTENCE_MAP_V7.md  RADAR_TEMPORAL_DEGRADATION_V6.md  REPOSITORY_STATUS.md  RESULTS_INDEX.md  SECOND_PASS_ONLINE_CI_REPAIR_REPORT.md  SIGNAL_CONTRACT.md  STRUCTURAL_OBSERVABILITY_ROLE.md
examples/: minimal_radar_demo.py  omnia_radar_minimal_detection.json  radar_demo.py  radar_minimal.py  radar_sample.json  sample_radar_stream.jsonl  stable_radar_stream.jsonl
omnia_radar/: __init__.py  backbone_observer.py  radar.py  types.py
omnia_radar_auditor/: cli.py  core.py
results/: emergence_beyond_limit_v1_results.jsonl
tests/: test_backbone_observer.py  (+3 more)
(+4 files in other folders)
