[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omnia-radar"
version = "1.0.0"
description = "Structural detection, drift surfacing, and signal persistence scan layer for OMNIA."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Massimiliano Brighindi", email = "brighissimo@users.noreply.github.com" }
]
license = { file = "LICENSE" }
keywords = ["omnia", "radar", "structural-detection", "drift", "signal-persistence"]

[project.urls]
Repository = "https://github.com/Tuttotorna/OMNIA-RADAR"
DOI = "https://doi.org/10.5281/zenodo.19829096"

[tool.setuptools.packages.find]
include = ["omnia_radar*"]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]


[tool.ruff]
target-version = "py310"
line-length = 88

[project.scripts]
omnia-radar-audit = "omnia_radar_auditor.cli:main"
